unpackaged/main/default/objects/cmbls__Disbursement_Batch__c/cmbls__Disbursement_Batch__c.object-meta.xml
<CustomObject>
    <label>Disbursement Batch</label>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>Disbursement Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>