unpackaged/main/default/objects/cmbls__Disbursement_Batch__c/fields/cmbls__Batch_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Batch_Date_Time__c</fullName>
    <label>Batch Date/Time</label>
    <type>DateTime</type>
</CustomField>