unpackaged/main/default/objects/cmbls__Disbursement_Batch__c/fields/cmbls__Status__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Partial Success</fullName>
            </value>
            <value>
                <fullName>Resubmission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>