unpackaged/main/default/objects/cmbls__Disbursement_Batch__c/fields/cmbls__Total_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Total_Transaction_Amount__c</fullName>
    <description>sum of Transaction Amount from all records associated with batch regardless of status or type</description>
    <inlineHelpText>sum of Transaction Amount from all records associated with batch regardless of status or type</inlineHelpText>
    <label>Total Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>